# ocaml-gd

./: BUGS  CHANGES  INSTALL  META  Makefile  Makefile.orig  README  README.ocamlgd  TODO  dune-project  font_list.txt  gd.ml  gd.mli  gd.opam  gdstubs.c  gdtest.ml
doc/: api-xref.html  api-xref.xml  manual.txt
src/: dune  gd.ml  gd.mli  gdstubs.c
src/config/: discover.ml
test/: dune  gdtest.ml
