opam-version: "2.0"
maintainer: "Romain Beauxis <toots@rastageeks.org>"
authors: "Matt Gushee <gd4o@havenrock.com>"
homepage: "https://github.com/savonet/gd4o"
build: [
  [make "CC=gcc -fPIC" "all"]
  [make "CC=gcc -fPIC" "opt"]
]
install: [
  [make "install"]
]
remove: ["ocamlfind" "remove" "gd"]
depends: [
  "ocaml"
  "ocamlfind" {build}
]
depexts: [
  ["gd-dev"] {os-distribution = "alpine"}
  ["gd"] {os-distribution = "archlinux"}
  ["libgd3-devel"] {os-distribution = "centos"}
  ["libgd3-devel"] {os-distribution = "fedora"}
  ["libgd3-devel"] {os-family = "suse"}
  ["libgd-dev"] {os-distribution = "debian"}
  ["libgd-dev"] {os-distribution = "ubuntu"}
  ["gd"] {os-distribution = "nixos"}
  ["gd"] {os = "macos" & os-distribution = "homebrew"}
]
bug-reports: "https://github.com/savonet/gd4o/issues"
dev-repo: "git+https://github.com/savonet/gd4o.git"
synopsis:
  "OCaml interface to the GD graphics library."
flags: light-uninstall
