(library
 (name gd)
 (public_name gd)
 (synopsis "Ocaml bindings to libgd")
 (foreign_stubs
  (language c)
  (names gdstubs)
  (flags
   (:include c_flags.sexp)))
 (c_library_flags
  (:include c_library_flags.sexp)))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (action
  (run ./config/discover.exe)))
